selfhost/test/typechecker/return_error_unreachable_stmt_for_outside.1.out
Error at %FILE_NAME%:5:3
Unreachable code
  |    val x = 123
       ^
Control flow exits before this code is reached
