selfhost/test/typechecker/return_error_unreachable_stmt_for_outside.2.abra
func foo(): Int {
  for x in [1, 2, 3] {
    if true return x else return x
  }
  val x = 123
}